--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -8,6 +8,7 @@ body {
     -webkit-font-smoothing: antialiased;
     background-color: #fff;
     background-color: var(--mdc-theme-background, #fff);
+    overflow-x: hidden;
 }
 
 .logo {
@@ -136,6 +137,7 @@ body.dark header .mdc-theme--on-primary {
     display: inline-block;
     margin-top: 24px;
     position: relative;
+    max-width: 100%;
 }
 .table-wrap:before {
     content: '';
@@ -156,7 +158,7 @@ body.dark header .mdc-theme--on-primary {
 }
 .table--scroll {
     max-height: calc(100vh - 489px);
-    min-height: 270px;
+    min-height: 404px;
     overflow-x: scroll;
     overflow-y: scroll;
     padding-top: 44px;
@@ -261,19 +263,23 @@ body.dark header .mdc-theme--on-primary {
     display: none;
 }
 .breadcrumbs__crumb:nth-child(2):after {
-    content: '' !important;
+    display: none !important;
 }  
 .breadcrumbs__crumb:not(:last-child):not(.breadcrumbs__no_caret)::after {
     content: '>';
     left: -2px;
     margin: 0 .5em;
     position: relative;
+    display: inline;
 }
 .breadcrumbs__crumb a {
     color: inherit;
     text-decoration: none;
 }
 
+.page-title {
+    font-size: 2.75rem;
+}
 
 /* Big Phone and up */
 @media(min-width: 599px) {
@@ -281,7 +287,7 @@ body.dark header .mdc-theme--on-primary {
         display: block;
     }
     .breadcrumbs__crumb:nth-child(2):not(.breadcrumbs__no_caret):after {
-        content: '>' !important;
+        display: inline !important;
     }  
 }
 
@@ -308,6 +314,11 @@ body.dark header .mdc-theme--on-primary {
     }
     .page-title {
         margin-right: 0 !important;
+        font-size: 3.75rem;
+    }
+    .filter-group .mdc-text-field {
+        width: unset !important;
+        margin-right: 10px !important;
     }
 }
 /* Desktop and up */
@@ -462,12 +473,13 @@ body.dark header .mdc-theme--on-primary {
     transition: opacity 15ms linear 150ms, transform 180ms 0ms cubic-bezier(0.4, 0, 1, 1), background-color 15ms linear 200ms;
     transition: opacity 15ms linear 150ms, transform 180ms 0ms cubic-bezier(0.4, 0, 1, 1), -webkit-transform 180ms cubic-bezier(0.4, 0, 1, 1), background-color 15ms linear 200ms
 }
-
-
-/* Statblocks */ 
-.page-title {
-    margin-right: 70px;
+.filter-group .mdc-text-field {
+    width: 100%;
+    margin-right: 0;
 }
+
+
+/* Statblocks */
 .main.item-opened .stats-wrapper {
     display: block;
 }
@@ -480,8 +492,8 @@ body.dark header .mdc-theme--on-primary {
 .main .close-item {
     display: none;
     position: absolute;
-    top: 76px;
-    right: 20px;
+    top: 57px;
+    right: 0;
     height: 64px;
     width: 64px;
     font-size: 44px;
@@ -611,4 +623,132 @@ body.dark header .mdc-theme--on-primary {
 }
 .collapse.open .collapse-list {
     display: block;
+}
+.mdc-list.rules {
+    margin-left: 54px;
+}
+.mdc-list.rules .mdc-list-item {
+    height: 24px;
+}
+.mdc-list-item.rule-title {
+    height: 24px;
+    margin-left: 30px;
+}
+#rulescontent {
+    padding-bottom: 24px;
+}
+#rulescontent h1 {
+    font-family: Roboto, sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-size: 2.125rem;
+    line-height: 2.5rem;
+    font-weight: bold;
+    letter-spacing: .0073529412em;
+    text-decoration: inherit;
+    text-transform: inherit;
+    margin-top: 16px;
+    margin-bottom: 8px;
+}
+#rulescontent h2 {
+    font-family: Roboto, sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: bold;
+    letter-spacing: normal;
+    text-decoration: inherit;
+    text-transform: inherit;
+    margin-top: 16px;
+    margin-bottom: 8px;
+}
+#rulescontent h3 {
+    font-family: Roboto, sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-size: 1.25rem;
+    line-height: 2rem;
+    font-weight: bold;
+    letter-spacing: .0125em;
+    text-decoration: inherit;
+    text-transform: inherit;
+    margin-top: 16px;
+    margin-bottom: 8px;
+}
+#rulescontent h4 {
+    font-family: Roboto, sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-size: 1rem;
+    line-height: 1.6rem;
+    font-weight: bold;
+    letter-spacing: .0125em;
+    text-decoration: inherit;
+    text-transform: inherit;
+    margin-top: 16px;
+    margin-bottom: 8px;
+}
+#rulescontent h5 {
+    font-family: Roboto, sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-size: 1rem;
+    line-height: 1.6rem;
+    font-weight: bold;
+    letter-spacing: .0125em;
+    text-decoration: inherit;
+    text-transform: inherit;
+    margin-top: 16px;
+    margin-bottom: 8px;
+}
+#rulescontent strong {
+    font-weight: bold;
+}
+#rulescontent em {
+    font-style: italic;
+}
+#rulescontent ul {
+    padding-left: 48px;
+    list-style-type: disc;
+}
+#rulescontent ol {
+    padding-left: 48px;
+    list-style-type: disc;
+}
+#rulescontent p {
+    margin-bottom: 8px;
+}
+#rulescontent caption {
+    font-family: Roboto, sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-size: .75rem;
+    line-height: 1.25rem;
+    font-weight: 400;
+    letter-spacing: .0333333333em;
+    text-decoration: inherit;
+    text-transform: inherit
+}
+
+#rulescontent table {
+    font-size: 14px;
+    background-color: var(--mdc-theme-surface);
+    margin: 24px;
+}
+#rulescontent tr {
+    border-bottom: 1px solid;
+    border-color: var(--mdc-theme-text-divider-on-background);
+}
+#rulescontent tbody tr:hover {
+    background-color: var(--mdc-theme-text-light-hover-on-background)
+}
+#rulescontent tbody td {
+    padding: 12px 20px 8px;
+    color: var(--mdc-theme-on-surface);
+}
+#rulescontent thead td {
+    color: var(--mdc-theme-text-disabled-on-background);
+    text-align: start;
+    font-weight: 400;
 }
