--- a/css/my-styles.css
+++ b/css/my-styles.css
@@ -11,6 +11,9 @@ body {
     overflow-x: hidden;
 }
 
+.nav-button .logo {
+    margin-left: 8px;
+}
 .logo {
     width: 32px;
     height: 32px;
@@ -31,18 +34,22 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 64px;
+    height: 57px;
+}
+.nav-button a {
+    text-decoration: none;
 }
 
 .mdc-top-app-bar--fixed-adjust {
     flex-grow: 1;
 }
+.mdc-top-app-bar__title {
+    font-weight: bold;
+}
 
 .typography_mono {
     font-family: "Roboto Mono", monospace;
     text-transform: uppercase;
-    font-weight: bold;
-    line-height: 1.5;
 }
 
 .mdc-top-app-bar {
@@ -69,7 +76,10 @@ body.dark header .mdc-theme--on-primary {
     max-width: 392px;
 }
 .page-title {
-    font-size: 2.75rem;
+    font-size: 2rem;
+    padding-right: 44px;
+    line-height: 1.4;
+    margin: 24px 0 24px;
 }
 
 .darkmode-label {
@@ -77,6 +87,13 @@ body.dark header .mdc-theme--on-primary {
 }
 
 /* Drawer */
+.mdc-drawer__header a {
+    text-decoration: none;
+    outline: none !important;
+}
+.mdc-drawer__title {
+    font-weight: bold;
+}
 .mdc-drawer--modal {
     border-color: rgba(0, 0, 0, .12) !important;
     border-color: var(--mdc-theme-text-divider-on-background, rgba(0,0,0,.12)) !important;
@@ -157,7 +174,7 @@ body.dark header .mdc-theme--on-primary {
 .table-cell div {
     display: inline-block;
 }
-.table-row {
+.table-row:not(:last-child) {
     border-bottom: 1px solid;
     border-color: var(--mdc-theme-text-divider-on-background);
 }
@@ -224,7 +241,7 @@ body.dark header .mdc-theme--on-primary {
     flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
-    height: 64px;
+    height: 57px;
     font-size: 16px;
     padding: 0 64px;
     overflow: hidden;
@@ -367,14 +384,30 @@ body.dark header .mdc-theme--on-primary {
 
 
 /* Statblocks */
+.main {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
 .main.item-opened .stats-wrapper {
     display: block;
+}
+.main.item-opened .class-list-container {
+    display: none;
+}
+.main:not(.item-opened) .class-page--class-container {
+    display: none;
 }
 .main.item-opened #listcontainer {
     display: none;
 }
 .main.item-opened .close-item {
     display: block;
+}
+.main.item-opened .rules-wrapper {
+    display: none;
+}
+.main:not(.item-opened) #rulescontent {
+    display: none;
 }
 .main .close-item {
     display: none;
@@ -486,6 +519,7 @@ body.dark header .mdc-theme--on-primary {
 .collapse .collapse-toggle {
     height: 48px;
     cursor: pointer;
+    position: relative;
 }
 .collapse .collapse-wrapper {
     overflow: hidden;
@@ -493,16 +527,15 @@ body.dark header .mdc-theme--on-primary {
 .collapse .collapse-toggle:after {
     content: '\e5cf';
     font-family: 'Material Icons';
-    height: 32px;
-    width: 32px;
-    display: inline-block;
-    top: 6px;
-    position: relative;
+    top: 8px;
+    position: absolute;
     font-size: 24px;
-    padding-left: 8px;
+    display: block;
+    right: 8px;
+    transition: transform 235ms cubic-bezier(.4,0,.2,1);
 }
 .collapse.open .collapse-toggle:after {
-    content: '\e5ce';
+    transform: rotateZ(180deg);
 }
 .collapse-toggle.mdc-list-item {
     height: 46px;
@@ -619,9 +652,11 @@ body.dark header .mdc-theme--on-primary {
 #rulescontent table {
     font-size: 14px;
     background-color: var(--mdc-theme-surface);
-    margin: 24px;
+    border-radius: 4px;
+    box-shadow: 0 0 0 1px var(--mdc-theme-text-divider-on-background);
+    margin-top: 24px;
 }
-#rulescontent tr {
+#rulescontent tr:not(:last-child) {
     border-bottom: 1px solid;
     border-color: var(--mdc-theme-text-divider-on-background);
 }
@@ -632,10 +667,12 @@ body.dark header .mdc-theme--on-primary {
     padding: 12px 20px 8px;
     color: var(--mdc-theme-on-surface);
 }
-#rulescontent thead td {
+#rulescontent thead th {
     color: var(--mdc-theme-text-disabled-on-background);
     text-align: start;
     font-weight: 400;
+    padding: 12px 20px 8px;
+    color: var(--mdc-theme-on-surface);
 }
 
 /* Class Page */
@@ -653,6 +690,77 @@ body.dark header .mdc-theme--on-primary {
     display: none;
 }
 
+
+.subclass-feature .stat-name {
+    color: var(--mdc-theme-primary, '#6200ee');
+}
+.statsBlockHead .stat-name {
+    display: block;
+    padding-bottom: 8px;
+    padding-top: 24px;
+}
+.feature-link {
+    color: var(--mdc-theme-secondary, '#018786');
+    font-weight: bold;
+}
+.mobile-clone-spells {
+    margin-top: 24px;
+}
+.class-page--class-container .table-row--header .table-cell {
+    font-weight: bold;
+    color: var(--mdc-theme-text-primary-on-background, '#000');
+}
+.centred-col {
+    text-align: center;
+}
+#groupHeaders.table-row.table-row--header {
+    border-bottom: none;
+}
+#groupHeaders .colGroupTitle {
+    padding-bottom: 0 !important;
+}
+#colHeaders .features {
+    text-align: center;
+}
+#classtable .table {
+    border-radius: 4px;
+    box-shadow: 0 0 0 1px var(--mdc-theme-text-divider-on-background);
+    background-color: var(--mdc-theme-surface);
+}
+#classtable .table-cell {
+    font-size: 12.8px;
+}
+.class-page--class-container table#stats table {
+    width: unset;
+    margin-top: 24px;
+}
+.class-page--class-container table#stats th {
+    color: var(--mdc-theme-secondary, '#018786');
+    padding: 12px 20px 8px;
+}
+.class-page--class-container table#stats td {
+    padding: 12px 20px 8px;
+}
+.mobile-clone-spells .level.table-cell {
+    padding: 8px;
+}
+#classtable .table-row--header .table-cell {
+    padding: 8px 0;
+}
+#statsprof ul {
+    padding-left: 16px;
+    list-style: unset;
+}
+#statsprof .mdc-typography--headline6 {
+    margin-top: 16px;
+}
+#statsprof {
+    font-size: 12.8px;
+}
+.roller {
+    color: var(--mdc-theme-secondary, '#018786') !important;
+}
+
 /* Breakpoints */
 
 /* Big Phone and up */
@@ -662,10 +770,26 @@ body.dark header .mdc-theme--on-primary {
     }
     .breadcrumbs__crumb:nth-child(2):not(.breadcrumbs__no_caret):after {
         display: inline !important;
-    }  
+    }
+    .breadcrumbs__list {
+        height: 64px;
+        padding: 0;
+    }
+    .nav-button {
+        height: 64px;
+    }
+    .page-title {
+        font-size: 2.75rem;
+        line-height: 2.75rem;
+        margin: 24px 0 24px;
+        padding-right: 0;
+    }
 }
 /* Tablet and up */
 @media(min-width: 921px) {
+    .nav-button .logo {
+        margin-left: 24px;
+    }
     .container {
         max-width: 840px;
         padding: 0 40px;
@@ -674,10 +798,14 @@ body.dark header .mdc-theme--on-primary {
         display: none !important;
     }
     .breadcrumbs__list {
+        height: 64px;
         padding: 0;
     }
     .breadcrumbs__crumb:nth-child(1) {
         display: block;
+    }
+    .main {
+        overflow-x: auto;
     }
     .main.item-opened #listcontainer {
         display: block !important;
@@ -688,6 +816,8 @@ body.dark header .mdc-theme--on-primary {
     .page-title {
         margin-right: 0 !important;
         font-size: 3.75rem;
+        line-height: 3.75rem;
+        margin: 48px 0 24px;
     }
     .filter-group .mdc-text-field {
         width: unset !important;
@@ -734,6 +864,13 @@ body.dark header .mdc-theme--on-primary {
     }
     .breadcrumbs__crumb {
         font-size: 20px;
+    }
+}
+
+/* Below Big Phone */
+@media(max-width: 598px) {
+    .hidden-big-mobile-down {
+        display: none !important;
     }
 }
 /* Below Tablet */
@@ -816,4 +953,8 @@ body.dark header .mdc-theme--on-primary {
 }
 .margin-bottom_large {
     margin-bottom: 48px !important;
+}
+
+strong {
+    font-weight: bold;
 }
