--- a/css/styles.css
+++ b/css/styles.css
@@ -686,22 +686,47 @@ body.dark header .mdc-theme--on-primary {
     margin: 8px;
     border-radius: 4px;
     background-color: var(--mdc-theme-surface);
-    text-align: center;
     font-size: 20px;
     cursor: pointer;
     border: 1px solid var(--mdc-theme-text-divider-on-background);
+    position: relative; 
+}
+.class-grid-item .class-grid-item--text {
+    position: absolute;
+    bottom: 5px;
+    width: 100%;
+    left: 0;
+    text-align: center;
 }
 .class-grid-item:hover .class-grid-item--image {
-    transform: scale(3);
+    transform: scale(1.8);
 }
 .class-grid-item .class-grid-item--image {
     display: block;
     transition: transform 100ms 0ms cubic-bezier(0.4, 0, 1, 1);
     fill: var(--mdc-theme-text-disabled-on-background);
-    transform: scale(2.2);
-    height: 54.8px;
-    width: 48.6px;
-    margin: 25px auto 0;
+    height: 107px;
+    width: 80px;
+    margin: 20px auto 0;
+    padding-left: 2px;
+}
+.class-grid-item.list-item--activated .class-grid-item--image {
+    fill: var(--mdc-theme-primary, #6200ee);
+}
+.class-grid-item .class-grid-item__Barbarian {
+    padding-left: 0px;
+}
+.class-grid-item .class-grid-item__Artificer {
+    padding-left: 7px;
+}
+.class-grid-item .class-grid-item__Mystic {
+    padding-left: 16px;
+}
+.class-grid-item .class-grid-item__Druid {
+    padding-left: 4px;
+}
+.class-grid-item:hover .class-grid-item--image.class-grid-item__Mystic {
+    transform: scale(1.7);
 }
 
 .back-to-top {
@@ -834,8 +859,12 @@ body.dark header .mdc-theme--on-primary {
     padding-bottom: 8px;
 }
 .mdc-chip:not(.mdc-chip--selected):not(.cf-active):not(.os-active):hover {
-    color: var(--mdc-theme-on-surface, #000);
-    background-color: var(--mdc-theme-surface);
+    color:  #000;
+    background-color: #c8c8c8;
+}
+.mdc-chip:hover {
+    color: var(--mdc-theme-on-primary);
+    background-color: var(--mdc-theme-primary-darker);
 }
 .mdc-chip--selected {
     color: var(--mdc-theme-on-primary, #fff);
@@ -1037,6 +1066,7 @@ body.dark header .mdc-theme--on-primary {
 :not(.mdc-list--non-interactive)>:not(.mdc-list-item--disabled).list-item--activated.mdc-ripple-upgraded {
     --mdc-ripple-fg-opacity: 0.24
 }
+
 /* Desktop and up */
 @media(min-width: 1321px) {
     .container {
