--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,9 @@ body {
 .nav-button a {
     text-decoration: none;
 }
+a {
+    color: var(--mdc-theme-secondary, #018786);
+}
 
 .mdc-top-app-bar--fixed-adjust {
     flex-grow: 1;
@@ -214,6 +217,9 @@ body.dark header .mdc-theme--on-primary {
 .table.cults {
     min-width: 300px;
 }
+.table.spells .name {
+    max-width: 84px;
+}
 
 .sort {
     cursor: pointer;
@@ -314,8 +320,17 @@ body.dark header .mdc-theme--on-primary {
 .filter-menu {
     display: inline-flex;
 }
+.filter-menu .close-menu {
+    position: sticky;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    margin-left: 100vw;
+}
 .filter-menu .mdc-menu {
+    border: 1px solid var(--mdc-theme-text-divider-on-background);
     width: 420px;
+    overflow-x: hidden;
 }
 .filter-menu-divider {
     width: 100%;
@@ -324,31 +339,31 @@ body.dark header .mdc-theme--on-primary {
     border-color: var(--mdc-theme-text-divider-on-background, rgba(0,0,0,.12)) !important;
 }
 .filter-menu-row {
-    padding: 24px;
+    padding: 12px;
 }
-.filter-menu-row__heading-label {
-    width: 100%;
+.filter-menu-row:first-of-type {
+    margin-top: -44px;
 }
 .filter-menu-row__heading {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
-
+.filter-menu-row__heading-label {
+    padding-left: 4px;
+}
+.mini-view.mdc-chip-set {
+    padding: 0px;
+}
+.filter-menu-grid.mdc-chip-set {
+    padding: 0px;
+}
 .filter-menu-row__heading-buttons {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-}
-
-.filter-menu-grid {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
 }
 .filter-pill.mdc-fab--extended,
 .mini-pill.mdc-fab--extended {
@@ -358,24 +373,29 @@ body.dark header .mdc-theme--on-primary {
     margin: 2px;
 }
 .filter-pill[state=no],
-.mini-pill[state=no] {
+.mini-pill[state=no],
+.filter-pill[state=no]:hover,
+.mini-pill[state=no]:hover {
     color: #fff;
-    color: var(--mdc-theme-on-error, #fff);
+    color: var(--mdc-theme-on-error, #fff) !important;
     background-color: #b00020;
-    background-color: var(--mdc-theme-error, #b00020);
+    background-color: var(--mdc-theme-error, #b00020) !important;
 }
 .filter-pill[state=yes],
-.mini-pill[state=yes] {
+.mini-pill[state=yes],
+.filter-pill[state=yes]:hover,
+.mini-pill[state=yes]:hover {
     color: #fff;
-    color: var(--mdc-theme-on-secondary, #fff);
+    color: var(--mdc-theme-on-secondary, #fff) !important;
     background-color: #018786;
-    background-color: var(--mdc-theme-secondary, #018786);
+    background-color: var(--mdc-theme-secondary, #018786) !important;
 }
-.filter-pill[state=ignore] {
+.filter-pill[state=ignore],
+.filter-pill[state=ignore]:hover {
     color: rgba(0, 0, 0, 0.38);
-    color: var(--mdc-theme-text-disabled-on-background, rgba(0, 0, 0, 0.38));
+    color: var(--mdc-theme-text-disabled-on-background, rgba(0, 0, 0, 0.38)) !important;
     background-color: #fff;
-    background-color: var(--mdc-theme-background, #fff);
+    background-color: var(--mdc-theme-background, #fff) !important;
 }
 .mini-pill[state=ignore] {
     -webkit-transform: scale(0);
@@ -719,6 +739,17 @@ body.dark header .mdc-theme--on-primary {
     margin: 20px auto 0;
     padding-left: 2px;
 }
+.class-grid-item:hover .link-grid-item--image {
+    transform: scale(1.8);
+}
+.class-grid-item .link-grid-item--image {
+    width: 100%;
+    display: block;
+    transition: transform 100ms 0ms cubic-bezier(0.4, 0, 1, 1);
+    text-align: center;
+    font-size: 44px;
+    margin-top: 50px;
+}
 .class-grid-item.list-item--activated .class-grid-item--image {
     fill: var(--mdc-theme-primary, #6200ee);
 }
@@ -1042,6 +1073,16 @@ body.dark header .mdc-theme--on-primary {
         width: 840px;
         padding-left: calc((100vw - 840px) / 2);
         padding-right: 1000px;
+    }
+    .table.spells .name {
+        max-width: unset;
+    }
+
+    .filter-menu-row:first-of-type {
+        margin-top: 0;
+    }
+    .filter-menu .close-menu {
+        display: none;
     }
 }
 
