--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,9 @@ body.dark header .mdc-theme--on-primary {
     display: inline-block;
     padding-right: 0;
 }
+.landing-page .mdc-typography--headline5 {
+    color: var(--mdc-theme-primary);
+}
 
 .darkmode-label {
     cursor: pointer;
@@ -580,6 +583,14 @@ thead:last-child {
     right: 8px;
     transition: transform 235ms cubic-bezier(.4,0,.2,1);
 }
+.collapse.collapse--left-arrow .collapse-toggle > *:first-child {
+    padding-left: 48px;
+}
+.collapse.collapse--left-arrow .collapse-toggle:after {
+    left: 12px;
+    top: 11px;
+    right: unset;
+}
 .collapse.open .collapse-toggle:after {
     transform: rotateZ(180deg);
 }
@@ -820,7 +831,7 @@ thead:last-child {
     background-color: var(--mdc-theme-surface);
 }
 .dice-grid-item--image {
-    stroke: var(--mdc-theme-on-primary);
+    stroke: var(--mdc-theme-on-surface);
     fill: var(--mdc-theme-primary);
     display: block;
     width: 30px;
@@ -856,17 +867,17 @@ thead:last-child {
 }
 
 .mobile-clone-features .centred-col {
-    display: none;
+    display: none !important;
 }
 .mobile-clone-features #groupHeaders {
-    display: none;
+    display: none !important;;
 }
 .mobile-clone-spells .pb,
 .mobile-clone-spells .features {
-    display: none;
+    display: none !important;;
 }
 .mobile-clone-spells #nameTable {
-    display: none;
+    display: none !important;;
 }
 
 .feature-link {
@@ -958,6 +969,7 @@ thead:last-child {
     font-size: 14px;
 }
 #subclasses {
+    position: relative;
     margin-top: 16px;
     padding-top: 24px;
     border-top: 1px solid var(--mdc-theme-text-divider-on-background, rgba(0, 0, 0, 0.12));
@@ -976,13 +988,12 @@ thead:last-child {
     position: absolute;
     bottom: 0;
     left: 0;
-    height: 20px;
+    height: 28px;
     width: 100vw;
     text-align: center;
     padding-bottom: 0;
     cursor: pointer;
-    background-color: var(--mdc-theme-background);
-    padding-bottom: 4px;
+    padding-top: 4px;
 }
 #subclasses.fixed {
     background: var(--mdc-theme-background);
@@ -999,12 +1010,28 @@ thead:last-child {
 #subclasses.fixed.closed {
     height: 30px;
 }
+#subclasses.fixed.closed .title {
+    margin-bottom: 60px;
+}
 #subclasses.fixed.closed .tab {
     transform: rotateZ(180deg);
+    height: 58px;
 }
 #subclasses.fixed:after:hover {
     cursor: pointer;
-} 
+}
+#subclasses.closed #os-toggle {
+    display: none;
+}
+#subclasses #os-toggle {
+    position: absolute;
+    top: 11px;
+    background: none;
+    color: var(--mdc-theme-secondary);
+}
+#subclasses #os-toggle.os-active {
+    text-decoration: underline;
+}
 .mdc-chip:not(.mdc-chip--selected):not(.cf-active):not(.os-active):hover {
     color:  #000;
     background-color: #c8c8c8;
@@ -1161,6 +1188,14 @@ thead:last-child {
 
 /* Breakpoints */
 
+@media(min-width: 428px) {
+    #subclasses.fixed {
+        width: 392px;
+        padding-left: calc((100vw - 392px) / 2);
+        padding-right: 1000px;
+    }
+}
+
 /* Big Phone and up */
 @media(min-width: 599px) {
     .breadcrumbs__crumb:nth-child(3) {
@@ -1184,11 +1219,6 @@ thead:last-child {
     }
     .class-grid-item {
         width: calc(100% / 3 - 34px);
-    }
-    #subclasses.fixed {
-        width: 392px;
-        padding-left: calc((100vw - 392px) / 2);
-        padding-right: 1000px;
     }
     .dice-grid-item {
         padding: 12px;
@@ -1242,13 +1272,13 @@ thead:last-child {
     }
 
     .mobile-clone-features .centred-col {
-        display: table-cell;
+        display: table-cell !important;
     }
     .mobile-clone-features #groupHeaders {
-        display: table-row;
+        display: table-row !important;
     }
     .mobile-clone-spells {
-        display: none;
+        display: none !important;
     }
     .class-grid-item {
         width: calc(100% / 5 - 34px);
@@ -1349,7 +1379,7 @@ thead:last-child {
         top: 48px;
     }
     #subclasses.fixed .tab {
-        padding-left: calc(((100vw - 320px - 1160px) / 2) + 320px);
+        padding: 0 calc(((100vw - 320px - 1160px) / 2) + 320px);
         width: 1120px;
     }
 }
